tests/ui/error-codes/E0463.stderr
error[E0463]: can't find crate for `cookie_monster`
  --> $DIR/E0463.rs:2:11
   |
LL | #![plugin(cookie_monster)]
   |           ^^^^^^^^^^^^^^ can't find crate

error: aborting due to previous error

For more information about this error, try `rustc --explain E0463`.
