tests/ui/error-codes/E0463.rs
#![feature(plugin)]
#![plugin(cookie_monster)]
//~^ ERROR E0463
extern crate cake_is_a_lie;

fn main() {
}
